# jpo

./: .gitignore  CMakeLists.txt  CMakePresets.json  DataFetcher.cpp  DataFetcher.h  DatabaseManager.cpp  DatabaseManager.h  Doxyfile  Main.qml  MapComponent.qml  ParameterPanel.qml  README.md  SensorPanel.qml  StationMarker.qml  StationSearch.qml  build.bat  build_default_windows.bat  build_release_windows.bat  conanfile.txt  main.cpp  vcpkg.json
docs/html/: _data_fetcher_8h_source.html  _database_manager_8h_source.html  annotated.html  annotated_dup.js  class_data_fetcher-members.html  class_data_fetcher.html  class_database_manager-members.html  class_database_manager.html  classes.html  doxygen_crawl.html  files.html  files_dup.js  hierarchy.html  hierarchy.js  index.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_0.js  all_2.js  all_5.js  all_6.js  classes_0.js  pages_0.js  pages_1.js  searchdata.js
docs/latex/: _data_fetcher_8h_source.tex  _database_manager_8h_source.tex  annotated.tex  class_data_fetcher.tex  class_database_manager.tex  files.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex
include/: mainwindow.h  weatherapi.h  weatherview.h
src/: main.cpp  mainwindow.cpp  mainwindow.h  wallpaperservice.cpp  wallpaperservice.h  weatherapi.cpp  weatherview.cpp
